[project]
name = "s"
version = "0.0.0"

[tool.poetry]
name = "s"
version = "0.0.0"
description = "S-expression command-line parser"
authors = ["Blake Hawkins <blake.hawkins.11@gmail.com>"]
packages = [ { include = "app", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
s = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
